--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
     "@mikro-orm/postgresql": "^6.2.3",
     "@mikro-orm/reflection": "^6.2.3",
     "@mikro-orm/sqlite": "^6.2.3",
+    "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
-    "fastify": "^4.26.2"
+    "fastify": "^4.26.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6"
   }
 }
