--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "@mikro-orm/reflection": "^6.2.3",
     "@mikro-orm/sqlite": "^6.2.3",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "fastify": "^4.26.2",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6"
   }
